# scratrace

./: .gitignore  README.md  README.ru.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
src/scratrace/: app.py  banner  banner.py  i18n.py  lang.json  log_view.py  redirect_db_convert.py  settings.py  ui.py
src/scratrace/osint/: SiteRegistry.db  SiteRegistry.schema.sql  __init__.py  email.py  full_name.py  log.py  number_phone.py  pw_scripts.py  sites.py  username.py
tests/: conftest.py  cut_sites.py  test_app_navigation.py  test_pip.py  test_pw_scripts.py  test_sites.py  test_sqlite3.py  test_ui.py  test_username.py
