[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scratrace"
version = "0.2.0"
description = "OSINT CLI tool with an interactive rich-powered menu"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "scratrace" }]
dependencies = [
    "rich>=13.0.0",
    "platformdirs>=3.0.0",
    "aiohttp>=3.9.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
]

[project.scripts]
pyscratrace = "scratrace.app:main"
scratrace-log = "scratrace.log_view:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scratrace = ["banner", "lang.json", "osint/SiteRegistry.db"]

[tool.pytest.ini_options]
addopts = "-q -s -n auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "osint: OSINT checker behavioural tests over every imported site",
    "sites: site registry reachability tests",
    "mail: email OSINT checker tests (reserved)",
    "number_phone: phone number OSINT checker tests (reserved)",
]
